Bug fix container-stretch-right

--- a/stretching-breakpoints.scss
+++ b/stretching-breakpoints.scss
@@ -1,3 +1,10 @@
+$container-width: 90;
+
+.container {
+    width: $container-width + 0%;
+}
+
+
 $stretching-breakpoints: (
   //sm,
   md,
@@ -18,19 +25,20 @@ $stretching-breakpoints: (
             
     @include media-breakpoint-up($breakpoint){
 
-        $max-width: map-get($container-max-widths,$breakpoint) + 0px;
+        $container-max-width: map-get($container-max-widths,$breakpoint) + 0px;
 
         .container-stretch-right {
             max-width: ($container-width+((100 - $container-width)/2)) + 0%;
-            $margin: ((100 - $container-width)/2) + 0%;
-            margin-left: calc((100% - #{$max-width})/2);
-            width: calc(   #{$max-width} + ((100% - #{$max-width})/2)  );
+            //$margin: ((100 - $container-width)/2) + 0%;
+            //margin-left: calc((100% - #{$container-max-width})/2);
+            width: calc(   #{$container-max-width} + ((100% - #{$container-max-width})/2)  );
+            margin-right: 0;
         }
 
         .container-stretch-left {
             max-width: ($container-width+((100 - $container-width)/2)) + 0%;
-            $margin: ((100 - $container-width)/2) + 0%;
-            width: calc(   #{$max-width} + ((100% - #{$max-width})/2)  );
+            //$margin: ((100 - $container-width)/2) + 0%;
+            width: calc(   #{$container-max-width} + ((100% - #{$container-max-width})/2)  );
             margin: 0;
         }
 
